@@ -1,5 +1,6 @@
 NVIDIA Texture Tools version 2.0.9
  * Fix invalid assert when reading paletted TGA images. Fixes issue 125.
+ * Add support for luminance flag. Fixes issue 126.
 
 NVIDIA Texture Tools version 2.0.8
  * Fix float to fixed image conversion. Patch provided by Alex Pfaffe. Fixes issue 121.
